# rlm

./: .gitignore  CLAUDE.md  README.md  SPEC_BENCHMARKS.md  SPEC_MULTI_DOC.md  SPEC_SINGLE_DOC.md  example.py  pyproject.toml  requirements.txt  rlm.py  segmenter.py  simple_extract.py
.claude/commands/spec/: approve.md  design.md  implement.md  new.md  requirements.md  status.md  switch.md  tasks.md  update-task.md
benchmarks/: oolong_loader.py  run_oolong.py
examples/: README.md  contacts_report.html  quick_test.py  run_extraction.py  run_query.py  sample_data.txt  test_report.html  view_session.py
notebooks/: Initial_impl.ipynb  repl_state_demo.ipynb
rlm/: __init__.py  business.py  cli.py  config.py  exceptions.py  interactive.py  schemas.py
rlm/core/: __init__.py  engine.py  prompts.py  repl.py  tools.py  types.py
rlm/document/: __init__.py  converter.py  reader.py  segmenter.py
rlm/document/formats/: __init__.py  markdown.py  pdf.py  text.py
rlm/extraction/: __init__.py  schemas.py  structured.py
rlm/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py  openrouter.py
rlm/reasoning/: __init__.py  session.py  tracer.py
rlm/visualization/: __init__.py  citations.py  html.py
spec/: .current-spec
spec/001-single-doc-flow/: .requirements-approved  README.md  design.md  requirements.md  tasks.md
spec/002-query-types/: .design-approved  .requirements-approved  .tasks-approved  README.md  design.md  requirements.md  tasks.md
spec/004-rlm-library/: .tasks-approved  README.md  design.md  requirements.md  tasks.md
src/: __init__.py  config.py
src/single_doc/: __init__.py  converter.py  errors.py  indexer.py  json_convert.py  models.py  prompt_builder.py  repl.py  rlm.py  schema_gen.py
src/utils/: __init__.py  token_counter.py
tests/: test_indexer.py  test_llm_connection.py
